逆順表示する[ReverseBookShelfIterator]を追加

--- a/DesignPattern_Iterator/DesignPattern_Iterator/DesignPattern_Iterator.csproj
+++ b/DesignPattern_Iterator/DesignPattern_Iterator/DesignPattern_Iterator.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Iterator.cs" />
     <Compile Include="MainProcess.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReverseBookShelfIterator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
